--- a/Code/frontend/src/pages/Dashboard/Dashboard.module.css
+++ b/Code/frontend/src/pages/Dashboard/Dashboard.module.css
@@ -10,7 +10,7 @@
   flex-wrap: nowrap;
   margin-top: 10px;
   margin-bottom: 10px;
-  margin-left: 10px;
+  margin-left: 52px;
   margin-right: 10px;
   padding-right: 10px;
   width: max-content;
